@@ -4,14 +4,12 @@ import java.util.List;
 
 public class StudentRecordTester {
     public static void main(String[] args) {
-        ArrayList<Double> s1Marks= new ArrayList<Double>(Arrays.asList(1.0,9.0,3.0));
-        StudentRecord s1 = new StudentRecord(s1Marks, "s1");
-        s1.addMark(2);
-        s1.addMark(2);
-        s1.addMark(9);
-
+        ArrayList<Double> s1_marks = new ArrayList<Double>(List.of(100.0,92.0,91.0,97.0));
+        StudentRecord s1 = new StudentRecord(s1_marks, "Sadat");
+        s1.addMark(97);
         System.out.println(s1.hasImproved());
-        System.out.println(s1.average() + ", " + s1.median() + ", " + s1.mode());
+        s1.addMark(92);
+        System.out.println(s1.hasImproved());
         System.out.println(s1);
     }
 }
